Корректировка строки запуска